--- a/package.json
+++ b/package.json
@@ -2,11 +2,20 @@
   "name": "web322-app",
   "version": "1.0.0",
   "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "author": "Yatin rana",
+  "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cloudinary": "^1.37.3",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
     "handlebars": "^4.7.7",
+    "mongodb": "^5.7.0",
+    "mongoose": "^7.4.3",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.11.1",
     "pg-hstore": "^2.3.4",
@@ -14,19 +23,14 @@
     "streamifier": "^0.1.1",
     "strip-js": "^1.2.0"
   },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-  },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/NikhilaSharma08/Web322-app-2.git"
+    "url": "git+https://github.com/yatin2211/web322-app.git"
   },
-  "author": "Nikhila Sharma",
-  "license": "ISC",
   "bugs": {
-    "url": "https://github.com/NikhilaSharma08/Web322-app-2/issues"
+    "url": "https://github.com/yatin2211/web322-app/issues"
   },
-  "homepage": "https://github.com/NikhilaSharma08/Web322-app-2#readme",
-  "description": ""
+  "homepage": "https://github.com/yatin2211/web322-app#readme",
+  "description": "",
+  "type": "module"
 }
